--- a/hw9.ipynb
+++ b/hw9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -239,6 +239,7 @@
     "%matplotlib inline\n",
     "\n",
     "import Backward2 as p1\n",
+    "import MCint_class  as p2\n",
     "from Diff2 import Backward1\n",
     "\n",
     "blt.output_notebook()"
@@ -248,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 8\n",
+    "# Homework 9\n",
     "## Michael Seaman\n",
     "4/20/16"
    ]
@@ -495,13 +496,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Exercise 9.14 Monte Carlo Integration\n",
+    "\n",
+    "Given an estimated differential equation for a function, it can sometimes be difficult or even impossible to calculate symbolicly the explicit function that has that derivative. However, we can shortcut around this using random numbers to evaluate points. This is called the Monte Carlo method. \n",
+    "\n",
+    "We will test this method on the function $ f(x) =  3x^3 - 10x^2 + 14 $ with the known integral $F(x) = \\frac{3}{4}x^4  - \\frac{10}{3}x^3 + 14x $ and different numbers of trial points n\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monte Carlo Integration with 10 pts: F(20) = 99386.4067372\n",
+      "Monte Carlo Integration with 50 pts: F(20) = 84329.271825\n",
+      "Monte Carlo Integration with 500 pts: F(20) = 90621.2568169\n",
+      "Monte Carlo Integration with 10000 pts: F(20) = 93538.9025677\n",
+      "Monte Carlo Integration with 100000 pts: F(20) = 94162.5588751\n",
+      "Actual F(2) = 96280.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "MC_10 = p2.MCint_class(0, 20, 10)\n",
+    "MC_50 = p2.MCint_class(0, 20, 50)\n",
+    "MC_500 = p2.MCint_class(0, 20, 500)\n",
+    "MC_10000 = p2.MCint_class(0, 20, 10000)\n",
+    "MC_100000 = p2.MCint_class(0, 20, 100000)\n",
+    "\n",
+    "print \"Monte Carlo Integration with 10 pts: F(20) = \" + str(MC_10.integrate(p2.known_function))\n",
+    "print \"Monte Carlo Integration with 50 pts: F(20) = \" + str(MC_50.integrate(p2.known_function))\n",
+    "print \"Monte Carlo Integration with 500 pts: F(20) = \" + str(MC_500.integrate(p2.known_function))\n",
+    "print \"Monte Carlo Integration with 10000 pts: F(20) = \" + str(MC_10000.integrate(p2.known_function))\n",
+    "print \"Monte Carlo Integration with 100000 pts: F(20) = \" + str(MC_100000.integrate(p2.known_function))\n",
+    "\n",
+    "\n",
+    "print \"Actual F(20) = \" + str(p2.known_integral(20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see after running this chunk of code a couple of times that the estimation becomes more and more accurate the more points we use to evaluate - which makes sense statistically. The method would probably be better suited though, for "
+   ]
   }
  ],
  "metadata": {
